--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,3 +18,9 @@
   </li>
 </ul>
 
+<div>
+  <app-cart></app-cart>
+  <app-book-list></app-book-list>
+  <app-process-order-form></app-process-order-form>
+</div>
+
