--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<!-- <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
   </h1>
@@ -16,11 +16,11 @@
   <li>
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
-</ul>
+</ul> -->
 
 <div>
-  <app-cart></app-cart>
+  <!-- <app-cart></app-cart> -->
   <app-book-list></app-book-list>
-  <app-process-order-form></app-process-order-form>
+  <!-- <app-process-order-form></app-process-order-form> -->
 </div>
 
