--- a/src/app/products/components/book-list/book-list.component.html
+++ b/src/app/products/components/book-list/book-list.component.html
@@ -1,9 +1,3 @@
-<p>
-  book-list works!
-</p>
-<div *ngFor="let book of books">
-  <p>id: {{book.id}}</p>
-  <p>name: {{book.name}}</p>
-  <p>price: {{book.price}}</p>
-  <p>img: {{book.img}}</p>
-</div>
+<app-book *ngFor="let book of books" [book]="book">
+
+</app-book>
