--- a/src/app/products/components/book/book.component.html
+++ b/src/app/products/components/book/book.component.html
@@ -1,3 +1,21 @@
-<p>
-  book works!
-</p>
+<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 product-col">
+  <div class="product-block item-default" itemtype="http://schema.org/Product" itemscope>
+    <div class="image">
+      <a class="img" ><img src={{book.img}} alt="Lorem ipsum 19" class="img-responsive" /></a>
+    </div>
+    <div class="product-meta clearfix text-right">
+      <div class="img-overlay"></div>
+      <h3 class="name"><a>{{book.name}}</a></h3>	
+      <div class="description" itemprop="description">Lorem ipsum dolor sit amet, consectetur adipiscing...</div>
+      <div class="price" itemtype="http://schema.org/Offer" itemscope itemprop="offers">
+      <span class="special-price">${{book.price}}.00</span>
+      </div>
+
+      <div class="action">
+          <div class="cart">
+        <button data-loading-text="Loading..." type="button" value="Add to Cart"  class="btn btn-outline"><span>Add to Cart!</span></button>		
+      </div>
+    </div>
+  </div>
+</div>
+</div>
