--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,177 @@
-<div>
-  <!-- <app-cart></app-cart> -->
-  <app-book-list></app-book-list>
-  <!-- <app-process-order-form></app-process-order-form> -->
+<!-- header -->
+  
+<header id="header-main" class="header-main same-height-column">
+  <div class="inner"><div class="container">	
+    <div class="row">
+      <div class="col-md-6 col-sm-4 col-xs-4 column">	
+                <div id="logo-theme" class="logo-store">
+          <a href="http://demopavothemes.com/pav_books/index.php?route=common/home">
+            <img src="http://demopavothemes.com/pav_books/image/catalog/logo.png" title="Your Store" alt="Your Store" class="img-responsive" />
+          </a>
+        </div>
+                          
+      </div>
+      <div class="col-md-6 col-sm-8 col-xs-8 column">								
+        <div class="shopping-cart pull-right text-right">
+          <div id="cart" class="clearfix">
+    <div data-toggle="dropdown" data-loading-text="Loading..." class="heading media dropdown-toggle"> 
+      <div class="icon-shopping-cart"></div>     
+      <div class="cart-inner media-body text-left hidden-xs">
+        <h4>Shopping Cart</h4>
+        <span id="cart-total">0 item(s) - $0.00</span><i class="fa fa-angle-down"></i>
+      </div>      
+    </div>
+    <ul class="dropdown-menu">
+            <li>
+        <p class="empty text-center">Your shopping cart is empty!</p>
+      </li>
+      <!--CART-->
+      <app-cart-item></app-cart-item>
+      <!--CART-->
+      
+          </ul>
 </div>
+        </div>	
+        <div id="search" class="box-search input-group pull-right">
+  <input type="text" name="search" value="" placeholder="Search" class="form-control" />
+  <span class="input-group-btn">
+    <button type="button" class="button-search"><i class="fa fa-search"></i></button>
+  </span>
+</div>			
+      </div>
+    </div>
+  </div></div>
+</header> 		  
+
+<!-- /header -->
+  
+<div class="warpper">
+  <div class="container">
+    <div class="row">
+               <section id="sidebar-main" class="col-md-12">
+           <div id="content">
+             <div class="content-top">
+     <div id="pavtestimonial596160335" class="box carousel slide pavtestimonial special">
+       <div class="box-heading hidden">
+      <i class="fa fa-comments"></i><span>What Peopel Say</span>
+    </div>
+    <div class="carousel-inner">
+                    <div class="item active">
+                                  <div class="row">
+                           <div class="testimonial-item col-md-12 col-sm-12 col-xs-12">
+                                <div class="testimonial pull-left">
+                  <div class="description"><p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repell bloud seimen oyta.</p></div>
+                </div>
+                                
+                                <div class="avatar-profile pull-left">
+                  <div class="t-avatar pull-left"><img  alt="Brad PittDesignerwww.Demodemo.com" src="http://demopavothemes.com/pav_books/image/cache/catalog/demo/manufacturer/author2-60x60.jpg" class="img-circle"/></div>
+                  <div class="profile pull-left"><h3>Brad Pitt</h3><p>Designer</p><a href="#">www.Demodemo.com</a></div>
+                </div>
+                                              </div>
+                        </div>
+                              </div>
+              <div class="item ">
+                                  <div class="row">
+                           <div class="testimonial-item col-md-12 col-sm-12 col-xs-12">
+                                <div class="testimonial pull-left">
+                  <div class="description"><p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repell bloud seimen oyta.</p></div>
+                </div>
+                                
+                                <div class="avatar-profile pull-left">
+                  <div class="t-avatar pull-left"><img  alt="Peter PoHistorywww.Demodemo.com" src="http://demopavothemes.com/pav_books/image/cache/catalog/demo/manufacturer/author8-60x60.jpg" class="img-circle"/></div>
+                  <div class="profile pull-left"><h3>Peter Po</h3><p>History</p><a href="#">www.Demodemo.com</a></div>
+                </div>
+                                              </div>
+                        </div>
+                              </div>
+              <div class="item ">
+                                  <div class="row">
+                           <div class="testimonial-item col-md-12 col-sm-12 col-xs-12">
+                                <div class="testimonial pull-left">
+                  <div class="description"><p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repell bloud seimen oyta.</p></div>
+                </div>
+                                
+                                              </div>
+                        </div>
+                              </div>
+              <div class="item ">
+                                  <div class="row">
+                           <div class="testimonial-item col-md-12 col-sm-12 col-xs-12">
+                                <div class="testimonial pull-left">
+                  <div class="description"><p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repell bloud seimen oyta.</p></div>
+                </div>
+                                
+                                              </div>
+                        </div>
+                              </div>
+          </div>
+
+     
+        </div>
+      
+
+<div class="box box-normal producttabs module_class">
+      <div class="module-desc hidden"><p><br></p></div>
+    <div class="htabs">
+  <ul class="nav" id="producttabs5">
+           <li class="active"><a href="#tab-latest5" aria-expanded="true" data-toggle="tab">BOOKS</a></li>
+          
+      </ul>
+  </div>
+
+
+  <div class="tab-content">
+          <div class="tab-pane box-products carousel tabcarousel5 slide active" id="tab-latest5">
+
+               
+                <div class="carousel-inner ">
+                               <div class="item active">
+                                                <div class="row products-row">
+                                                  <!--ITEM START-->
+                                                 <app-book-list></app-book-list>
+
+                                                  <!--ITEM END-->  
+                
+                                 </div>
+                                          </div>
+                     
+                    
+                  </div>
+      </div>
+        
+      
+      </div>
+</div>
+
+
+<script>
+$(function () {
+$('#producttabs5 a:first').tab('show');
+})
+$('.tabcarousel5').carousel({interval:false,auto:false,pause:'hover'});
+</script>
+<div id="banner0" class="box banner hidden-xs hidden-sm">
+  </div>
+ 
+
+
+
+</div>
+             <div class="content-bottom"></div>
+           </div>
+        </section> 	
+          </div>
+  </div>
+</div>
+ 
+
+  
+  <!-- <app-cart></app-cart> -->
+  <!-- <app-book-list></app-book-list> -->
+  
+  <!-- <app-cart-item></app-cart-item> -->
+  <!-- <app-process-order-form></app-process-order-form> -->
+
+
+
 
