--- a/src/app/products/components/book/book.component.html
+++ b/src/app/products/components/book/book.component.html
@@ -13,7 +13,7 @@
 
       <div class="action">
           <div class="cart">
-        <button data-loading-text="Loading..." type="button" value="Add to Cart"  class="btn btn-outline"><span>Add to Cart!</span></button>		
+        <button (click)="onBuyBook($event)" data-loading-text="Loading..." type="button" value="Add to Cart"  class="btn btn-outline"><span>Add to Cart</span></button>		
       </div>
     </div>
   </div>
