--- a/src/app/products/components/book-list/book-list.component.html
+++ b/src/app/products/components/book-list/book-list.component.html
@@ -1,3 +1,3 @@
-<app-book *ngFor="let book of books" [book]="book">
+<app-book (buy)="onBuy($event)" *ngFor="let book of books" [book]="book">
 
 </app-book>
