--- a/src/app/cart/components/cart/cart.component.html
+++ b/src/app/cart/components/cart/cart.component.html
@@ -8,8 +8,8 @@
       <td class="text-left"><a href="http://demopavothemes.com/pav_books/index.php?route=product/product&amp;product_id=48">Lorem ipsum 18</a>
                       </td>
       <td class="text-right quantity">x {{cartItem.quantity}}</td>
-      <td class="text-center"><button type="button" (click)="onAdd($event)" title="+" class="btn  btn-xs">+</button></td>
-      <td class="text-center"><button type="button" (click)="onRem($event)" title="-" class="btn btn-xs">-</button></td>
+      <td class="text-center"><button type="button" (click)="onPlus($event)" title="+" class="btn  btn-xs">+</button></td>
+      <td class="text-center"><button type="button" (click)="onMinus($event)" title="-" class="btn btn-xs">-</button></td>
       <td class="text-right">${{cartItem.price}}</td>
       <td class="text-center"><button type="button" (click)="onDelete($event)" title="Remove" class="btn btn-danger btn-xs"></button></td>
     </tr>
