--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,9 @@
     <div class="row">
       <div class="col-md-6 col-sm-4 col-xs-4 column">	
                 <div id="logo-theme" class="logo-store">
-          <a href="http://demopavothemes.com/pav_books/index.php?route=common/home">
+          <!-- <a href="http://demopavothemes.com/pav_books/index.php?route=common/home"> -->
             <img src="http://demopavothemes.com/pav_books/image/catalog/logo.png" title="Your Store" alt="Your Store" class="img-responsive" />
-          </a>
+          <!-- </a> -->
         </div>
                           
       </div>
@@ -17,13 +17,13 @@
     <div data-toggle="dropdown" data-loading-text="Loading..." class="heading media dropdown-toggle"> 
       <div class="icon-shopping-cart"></div>     
       <div class="cart-inner media-body text-left hidden-xs">
-        <h4>Shopping Cart</h4>
-        <span id="cart-total">0 item(s) - $0.00</span><i class="fa fa-angle-down"></i>
+        <h3>Shopping Cart</h3>
+        <!-- <span id="cart-total">0 item(s) - $0.00</span><i class="fa fa-angle-down"></i> -->
       </div>      
     </div>
     <ul class="dropdown-menu">
             <li>
-        <p class="empty text-center">Your shopping cart is empty!</p>
+        <!-- <p class="empty text-center">Your shopping cart is empty!</p> -->
       </li>
       <!--CART-->
       <app-cart-item></app-cart-item>
