--- a/src/app/cart/components/cart/cart.component.html
+++ b/src/app/cart/components/cart/cart.component.html
@@ -2,16 +2,17 @@
   <table class="table table-striped">
               <tbody><tr>
       <td class="text-center">              
-        <a href="http://demopavothemes.com/pav_books/index.php?route=product/product&amp;product_id=48">
-        <img width="46" height="80" src="{{cartItem.img}}"></a>
-        </td>
-      <td class="text-left"><a href="http://demopavothemes.com/pav_books/index.php?route=product/product&amp;product_id=48">Lorem ipsum 18</a>
+        <img width="46" height="80" src="{{cartItem.img}}">
+              <td class="text-left">{{cartItem.name}}
                       </td>
       <td class="text-right quantity">x {{cartItem.quantity}}</td>
       <td class="text-center"><button type="button" (click)="onPlus($event)" title="+" class="btn  btn-xs">+</button></td>
       <td class="text-center"><button type="button" (click)="onMinus($event)" title="-" class="btn btn-xs">-</button></td>
       <td class="text-right">${{cartItem.price}}</td>
-      <td class="text-center"><button type="button" (click)="onDelete($event)" title="Remove" class="btn btn-danger btn-xs"></button></td>
+      <td class="text-center"><button type="button" (click)="onDelete($event)" title="Remove" class="btn btn-danger btn-xs">X</button></td>
     </tr>
+    
                       </tbody></table>
+
+                      
 </li>
